apps/base/matrix/networkpolicies/matrix.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: matrix
  namespace: matrix
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: proxy
            k8s:app.kubernetes.io/managed-by: envoy-gateway
            k8s:app.kubernetes.io/name: envoy
            k8s:gateway.envoyproxy.io/owning-gateway-name: envoy-gateway
            k8s:gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
            io.kubernetes.pod.namespace: envoy-gateway
      toPorts:
        - ports:
            - port: "10443"
    - toEndpoints:
        - matchLabels:
            k8s:app: draupnir-synapse-keydb
            io.kubernetes.pod.namespace: matrix
      toPorts:
        - ports:
            - port: "6379"
    - toEndpoints:
        - matchLabels:
            k8s:app: matrix-synapse-keydb
            io.kubernetes.pod.namespace: matrix
      toPorts:
        - ports:
            - port: "6379"
    - toEndpoints:
        - matchLabels:
            k8s:app: pantalaimon-freifunk
            io.kubernetes.pod.namespace: matrix
      toPorts:
        - ports:
            - port: "8008"
    - toEndpoints:
        - matchLabels:
            instance: draupnir-synapse
            io.kubernetes.pod.namespace: matrix
      toPorts:
        - ports:
            - port: "9093"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: matrix-synapse
            io.kubernetes.pod.namespace: matrix
      toPorts:
        - ports:
            - port: "9093"
    - toEndpoints:
        - matchLabels:
            k8s:cnpg.io/cluster: pg-cluster-v2
            io.kubernetes.pod.namespace: postgres-cluster
      toPorts:
        - ports:
            - port: "5432"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: traefik
            io.kubernetes.pod.namespace: traefik-ingress
      toPorts:
        - ports:
            - port: "8443"
